z-index fix

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
 
 #vis {
     visibility: hidden;
-    z-index: 2;
 }
 
 /* Style the navigation menu */
@@ -52,7 +51,6 @@ html {
     background: black;
     display: block;
     position: fixed;
-    z-index: 3;
     top: 20px;
     left: 325px;
     width: 20px;
@@ -84,7 +82,6 @@ i {
     bottom: 20px;
     background: #f2f4f3;
     transform: scale(1.09);
-    z-index: 2;
     text-align: center;
     border: 1px solid black;
 }
@@ -355,7 +352,6 @@ a {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
 }
 
 /* Links inside the dropdown */
